# SteinLang

./: .gitignore  .gitmodules  BUILD.variant  CMakeLists.txt  LICENSE  README.md  WORKSPACE  file_io.h  language_evaluation.cc  language_evaluation.h  literal_ops.cc  literal_ops.h  map_util.h  memory.cc  memory.h  test_main.cc
interpreter/: language_evaluation.cc  language_evaluation.h  literal_ops.cc  literal_ops.h  memory.cc  memory.h  test_main.cc
lang/: BUILD  CMakeLists.txt  cfg_parser.cc  cfg_parser.h  cfg_parser_main.cc  parse_tree_util.h  recursive_descent_parser.h  tokenizer.h
lang/cfgtl/: BUILD  builder.h  cardinality.h  cfg_types.h  parser.h  parser_test.cc
lang/data/: .grammar_def.proto.swp  grammar2_def.cfg.txt  grammar_def.cfg.txt  python.cfg.txt
lang/interpreter/: CMakeLists.txt  interpreter_main.cc  language_evaluation.cc  language_evaluation.h  literal_ops.cc  literal_ops.h  memory.cc  memory.h  pgm_diff_tool.cc  source_util.cc  source_util.h  steinlang_def.cfg.txt  steinlang_parser.cc  steinlang_parser.h  steinlang_syntax.proto
lang/interpreter/pgms/: fibo_test.stein.txt  print_test.pb.txt
lang/steinlang/: BUILD  interpreter_main.cc  language_evaluation.cc  language_evaluation.h  literal_ops.cc  literal_ops.h  memory.cc  memory.h  pgm_diff_tool.cc  source_util.cc  source_util.h  steinlang_parser.cc  steinlang_parser.h
lang/steinlang/pgms/: func_app_test.stein.txt  multi_param_func_app.stein.txt
pgms/: fibo_test.txt
proto/: CMakeLists.txt  language.proto  service.proto
storage/: leveldb_store.cc  leveldb_store.h  storage_server.cc  storage_server.h  storage_server_main.cc  storage_tool_main.cc
util/: BUILD  CMakeLists.txt  diff.h  diff_tool.cc  file_io.h  lru_cache.h  map_util.h  one_of.h  optional.h  source_util.cc  source_util.h  strings.h  variant.h
util/proto/: CMakeLists.txt  diff_proto.cc  diff_proto.h
